apply errorprone
add errorprone plugin and fix warnings